# elive

./: .gitignore  CMakeLists.txt  mc-live.sln
BasicUsageEnvironment/: BasicTaskScheduler.cpp  BasicUsageEnvironment.vcxproj  BasicUsageEnvironment.vcxproj.filters  CMakeLists.txt  ReadMe.txt
UsageEnvironment/: CMakeLists.txt  ReadMe.txt  UsageEnvironment.vcxproj  UsageEnvironment.vcxproj.filters
UsageEnvironment/include/: UsageEnvironment.hh
groupsock/: CMakeLists.txt  Groupsock.cpp  GroupsockHelper.cpp  ReadMe.txt  groupsock.vcxproj  groupsock.vcxproj.filters
liveMedia/: ADTSAudioFileServerMediaSubsession.cpp  AVIFileSink.cpp  ByteStreamFileSource.cpp  CMakeLists.txt  FileServerMediaSubsession.cpp  GenericMediaServer.cpp  H264VideoFileServerMediaSubsession.cpp  H264or5VideoRTPSink.cpp  H264or5VideoStreamFramer.cpp  MP3AudioFileServerMediaSubsession.cpp  MPEG2TransportStreamMultiplexor.cpp  MPEG4ESVideoRTPSink.cpp  MPEG4GenericRTPSink.cpp  Media.cpp  MediaSession.cpp  OnDemandServerMediaSubsession.cpp  RTSPServer.cpp  ReadMe.txt  liveMedia.vcxproj  liveMedia.vcxproj.filters
liveMedia/include/: ADTSAudioFileServerMediaSubsession.hh  FramedFilter.hh  GenericMediaServer.hh  MPEG2TransportStreamFromESSource.hh  MPEG2TransportStreamMultiplexor.hh  MPEG4ESVideoRTPSink.hh  Media.hh  MultiFramedRTPSink.hh  RTPSink.hh  VideoRTPSink.hh
mc-live/: DarwinInjector.cpp  mc-live.vcxproj  mc-live.vcxproj.filters  testMP3Streamer.cpp
mc-live/include/: testMPEG4VideoToDarwin.cpp
mediaClient/: CMakeLists.txt  DarwinInjector.cpp  ExternSource.hpp  elive.c  pushVideoToDarwin.cpp  testMPEG4VideoToDarwin.cpp
mediaClient/include/: DarwinInjector.hh  elive.h
mediaServer/: CMakeLists.txt  live555MediaServer.cpp  mediaServer.vcxproj  mediaServer.vcxproj.filters
testProgs/: CMakeLists.txt  openRTSP.cpp  playCommon.cpp  testMP3Streamer.cpp  testOnDemandRTSPServer.cpp  testProgs.vcxproj  testProgs.vcxproj.filters
